# Beauty

./: CMakeLists.txt  README.md
Shader/: bfilter.fs  edge.fs  nms.fs  shader.vs  sharp.fs
include/: texture.h
src/: bfilter.cpp  texture.cpp
